--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import "./index.css";
+@import './markdown.css';
 /*@import "./ionic.css";*/
 /*your custom styles here*/
 /*@import './styles/main.css'*/
