--- a/src/components/UI/styles/NavBar.css
+++ b/src/components/UI/styles/NavBar.css
@@ -1,35 +1,35 @@
-@layer components {
-    .header-text {
-        @apply text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline;
-    }
+/*@layer components {*/
+/*    .header-text {*/
+/*        @apply text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark:text-white focus:outline-none focus:shadow-outline;*/
+/*    }*/
 
-    .nav-bar-button {
-        @apply block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-transparent
-        rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600
-        dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 hover:text-gray-900
-        focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline;
-    }
+/*    .nav-bar-button {*/
+/*        @apply block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-transparent*/
+/*        rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600*/
+/*        dark:focus:text-white dark:hover:text-white dark:text-gray-200 hover:text-gray-900*/
+/*        focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline;*/
+/*    }*/
 
-    .nav-bar-button:selected {
-        @apply block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200
-        rounded-lg dark-mode:bg-gray-700 dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600
-        dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200
-        hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200
-        focus:outline-none focus:shadow-outline;
-    }
+/*    .nav-bar-button:selected {*/
+/*        @apply block px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200*/
+/*        rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600*/
+/*        dark:focus:text-white dark:hover:text-white dark:text-gray-200*/
+/*        hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200*/
+/*        focus:outline-none focus:shadow-outline;*/
+/*    }*/
 
-    .dropdown-button {
-        @apply flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold
-        text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white
-        dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:block
-        hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none
-        focus:shadow-outline;
-    }
+/*    .dropdown-button {*/
+/*        @apply flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold*/
+/*        text-left bg-transparent rounded-lg dark:bg-transparent dark:focus:text-white*/
+/*        dark:hover:text-white dark:focus:bg-gray-600 dark:hover:bg-gray-600 md:block*/
+/*        hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none*/
+/*        focus:shadow-outline;*/
+/*    }*/
 
-    .dropdown-menu-button {
-        @apply block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent
-        dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white
-        dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200
-        focus:outline-none focus:shadow-outline;
-    }
-}
+/*    .dropdown-menu-button {*/
+/*        @apply block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent*/
+/*        dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white*/
+/*        dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200*/
+/*        focus:outline-none focus:shadow-outline;*/
+/*    }*/
+/*}*/
