--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -56,3 +56,11 @@ html.dark .prose {
     --prism-line-highlight-background: #444444;
     --prism-selection-background: #444444;
 }
+
+html:not(.dark) .prose code {
+    color: #ffffff !important;
+}
+
+html.dark .prose code {
+    color: #dcdcdc !important;
+}
