--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,60 +1,169 @@
-/* https://github.com/antfu/prism-theme-vars */
-@import 'prism-theme-vars/base.css';
-
-.prose {
-    --prism-font-family: 'Input Mono', monospace;
+/*
+ * highlightjs-material-dark-theme
+ * Material Dark theme for Highlight.js
+ * Based off of https://github.com/equinusocio/material-theme
+ * For use with Highlight.js, https://github.com/isagalaev/highlight.js
+ */
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/zU7WTKudYj3kyp83WUTNRIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/1Ci0A82NC1vmnBGZ40JtDIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek-ext */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/CNcOMq0eKtUFFFCp0lHQLIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+    unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/15JCs9lpil7lsTP978NDCoX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+    unicode-range: U+0370-03FF;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/4JBDq56CMkU462bp0T-W9IX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Fira Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/SlRWfq1zeqXiYWAN-lnG-pBw1xU1rKptJj_0jans920.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
-.prose img {
+.hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 1em;
+    background: #2B2B2D;
+    color: #CDD3D8;
+    font-family: "Fira Mono", monospace;
+    font-size: 1em;
+}
+.hljs > *::selection {
+    background-color: #3e4451;
+}
+
+.hljs-comment {
+    color: #656565;
+    font-style: italic;
+}
+
+.hljs-selector-tag {
+    color: #C792EA;
+}
+
+.hljs-string,
+.hljs-subst {
+    color: #C3E88D;
+}
+
+.hljs-number,
+.hljs-regexp,
+.hljs-variable,
+.hljs-template-variable {
+    color: #F77669;
+}
+
+.hljs-keyword {
+    color: #C792EA;
+}
+.hljs-function > .hljs-title {
+    color: #75A5FF;
+}
+.hljs-tag {
+    color: #abb2bf;
+}
+.hljs-name {
+    color: #e06c75;
+}
+.hljs-type {
+    color: #da4939;
+}
+
+.hljs-attribute {
+    color: #80CBBF;
+}
+
+.hljs-symbol,
+.hljs-bullet,
+.hljs-built_in,
+.hljs-builtin-name,
+.hljs-link {
+    color: #C792EA;
+}
+
+.hljs-params {
+    color: #EEFFF7;
+}
+
+
+.hljs-meta {
+    color: #75A5FF;
+}
+
+.hljs-title {
+    color: #75A5FF;
+}
+
+.hljs-section {
+    color: #ffc66d;
+}
+
+.hljs-addition {
+    background-color: #144212;
+    color: #e6e1dc;
+    display: inline-block;
     width: 100%;
 }
 
-html:not(.dark) .prose {
-    --prism-foreground: #393a34;
-    --prism-background: #fbfbfb;
-    --prism-comment: #a0ada0;
-    --prism-string: #b56959;
-    --prism-literal: #2f8a89;
-    --prism-number: #296aa3;
-    --prism-keyword: #1c6b48;
-    --prism-function: #6c7834;
-    --prism-boolean: #1c6b48;
-    --prism-constant: #a65e2b;
-    --prism-deleted: #a14f55;
-    --prism-class: #2993a3;
-    --prism-builtin: #ab5959;
-    --prism-property: #b58451;
-    --prism-namespace: #b05a78;
-    --prism-punctuation: #8e8f8b;
-    --prism-decorator: #bd8f8f;
-    --prism-regex: #ab5e3f;
-    --prism-json-property: #698c96;
+.hljs-deletion {
+    background-color: #600;
+    color: #e6e1dc;
+    display: inline-block;
+    width: 100%;
 }
 
-html.dark .prose {
-    --prism-foreground: #d4cfbf;
-    --prism-background: #151515;
-    --prism-comment: #758575;
-    --prism-string: #d48372;
-    --prism-literal: #429988;
-    --prism-keyword: #4d9375;
-    --prism-boolean: #1c6b48;
-    --prism-number: #6394bf;
-    --prism-variable: #c2b36e;
-    --prism-function: #a1b567;
-    --prism-deleted: #a14f55;
-    --prism-class: #54b1bf;
-    --prism-builtin: #e0a569;
-    --prism-property: #dd8e6e;
-    --prism-namespace: #db889a;
-    --prism-punctuation: #858585;
-    --prism-decorator: #bd8f8f;
-    --prism-regex: #ab5e3f;
-    --prism-json-property: #6b8b9e;
-    --prism-line-number: #888888;
-    --prism-line-number-gutter: #eeeeee;
-    --prism-line-highlight-background: #444444;
-    --prism-selection-background: #444444;
+.hljs-selector-class {
+    color: #FFCB68;
+}
+
+.hljs-selector-id {
+    color: #F77669;
+}
+
+.hljs-emphasis {
+    font-style: italic;
+}
+
+.hljs-strong {
+    font-weight: bold;
+}
+
+.hljs-link {
+    text-decoration: underline;
 }
 
 html:not(.dark) .prose code {
