--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -12,6 +12,7 @@
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/zU7WTKudYj3kyp83WUTNRIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
     unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
+
 /* cyrillic */
 @font-face {
     font-family: 'Fira Mono';
@@ -20,6 +21,7 @@
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/1Ci0A82NC1vmnBGZ40JtDIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
 /* greek-ext */
 @font-face {
     font-family: 'Fira Mono';
@@ -28,6 +30,7 @@
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/CNcOMq0eKtUFFFCp0lHQLIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
     unicode-range: U+1F00-1FFF;
 }
+
 /* greek */
 @font-face {
     font-family: 'Fira Mono';
@@ -36,6 +39,7 @@
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/15JCs9lpil7lsTP978NDCoX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
     unicode-range: U+0370-03FF;
 }
+
 /* latin-ext */
 @font-face {
     font-family: 'Fira Mono';
@@ -44,6 +48,7 @@
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/4JBDq56CMkU462bp0T-W9IX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
     font-family: 'Fira Mono';
@@ -51,6 +56,75 @@
     font-weight: 400;
     src: local('Fira Mono Regular'), local('FiraMono-Regular'), url(https://fonts.gstatic.com/s/firamono/v5/SlRWfq1zeqXiYWAN-lnG-pBw1xU1rKptJj_0jans920.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+.prose {
+    max-width: 65ch;
+    font-size: 1rem;
+    line-height: 1.75;
+}
+
+.prose pre {
+    background-color: #1f2937;
+    overflow-x: auto;
+    font-size: .875em;
+    line-height: 1.7142857;
+    margin-top: 1.7142857em;
+    margin-bottom: 1.7142857em;
+    border-radius: 0.375rem;
+    padding: 0.8571429em 1.1428571em;
+}
+
+.dark .prose {
+    color: #dcdcdc;
+}
+
+.dark .prose pre {
+    color: #f5f5f4;
+    background-color: #1c1917;
+}
+
+.prose p {
+    color: #181818;
+}
+
+.dark .prose p {
+    color: #d6d3d1;
+}
+
+.prose h1 {
+    font-weight: 800;
+    font-size: 2.25em;
+    margin-top: 0;
+    margin-bottom: 0.8888889em;
+    line-height: 1.1111111;
+}
+
+.prose a {
+    text-decoration: underline;
+    font-weight: 500;
+}
+
+.dark .prose a {
+    color: #e7e5e4;
+}
+
+.prose strong {
+    font-weight: 600;
+}
+
+.dark .prose strong {
+    color: #e7e5e4;
+}
+
+.prose hr {
+    border-color: #e7e5e4;
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
+.dark .prose hr {
+    color: #e7e5e4;
 }
 
 .hljs {
@@ -62,6 +136,7 @@
     font-family: "Fira Mono", monospace;
     font-size: 1em;
 }
+
 .hljs > *::selection {
     background-color: #3e4451;
 }
@@ -90,15 +165,19 @@
 .hljs-keyword {
     color: #C792EA;
 }
+
 .hljs-function > .hljs-title {
     color: #75A5FF;
 }
+
 .hljs-tag {
     color: #abb2bf;
 }
+
 .hljs-name {
     color: #e06c75;
 }
+
 .hljs-type {
     color: #da4939;
 }
@@ -164,12 +243,4 @@
 
 .hljs-link {
     text-decoration: underline;
-}
-
-html:not(.dark) .prose code {
-    color: #ffffff !important;
-}
-
-html.dark .prose code {
-    color: #dcdcdc !important;
 }
