feat(UI): UI components refactored - replaced winidcss with tailwindcss - components rewritten with emotion - added components - initialized storybook in the project - installed some packages

--- a/src/styles/animations/fadeIn.css
+++ b/src/styles/animations/fadeIn.css
@@ -1,5 +1,6 @@
 .fade-in {
 	opacity: 1;
+	transition-property: transform;
 	animation-name: fadeInOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
